# chromvoid

./: .gitignore  .mcp-search-profile.yaml  .oxlintrc.json  .prettierrc.cjs  .ragignore  Cargo.toml  E2E_TAURI_SPEC.md  LICENSE  LICENSING.md  NETWORK_REFACTORING_ANALYSIS.md  package.json  readme.md  skills-lock.json  tsconfig.json
apps/chromvoid/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json
apps/chromvoid/src-tauri/capabilities/: main-window-dev.json  main-window.json  mobile-dev.json  mobile.json
apps/chromvoid/src-tauri/icons/: icon.icns
apps/chromvoid/src-tauri/permissions/: app.toml
apps/chromvoid/src-tauri/permissions/autogenerated/: android_audio_session_command.toml  android_autofill_provider_status.toml  android_media_session_stop.toml  android_media_session_update.toml  android_open_autofill_provider_settings.toml  android_otp_qr_scan_cancel.toml  android_otp_qr_scan_start.toml  android_passkey_delete.toml  android_passkeys_list.toml  android_password_save_finish.toml  android_quick_lock_tile_status.toml  android_request_quick_lock_tile.toml  android_video_start.toml  android_video_stop.toml  backup_local_cancel.toml  backup_local_create.toml  catalog_cancel_android_shared_files.toml  catalog_cancel_native_upload.toml  catalog_cancel_shared_files.toml  catalog_download.toml  catalog_download_path.toml  catalog_file_replace.toml  catalog_image_metadata.toml  catalog_list_shared_files.toml  catalog_secret_read.toml  (+120 more)
apps/chromvoid/src-tauri/src/: app_state.rs  audio_artwork.rs  auto_lock.rs  catalog_blocking_io.rs  credential_provider_contract.rs  credential_provider_passkey.rs  host_path_capability.rs  image_preview.rs  ios_keep_awake.rs  lib.rs  macos_external.rs  main.rs  mode_transition_coordinator.rs  paired_store_crypto.rs  pro.rs  remote_io_runtime.rs  rpc_transport_protocol.rs  session_settings.rs  session_settings_tests.rs  setup.rs  state_ext.rs  task_lifecycle.rs  tray.rs  types.rs  vault_background_io.rs  volume_windows.rs
apps/chromvoid/src-tauri/tests/: e2e_desktop_mobile_thin_client.rs  e2e_user_scenarios.rs  gateway_protocol.rs  integration_desktop_mobile.rs  mobile_acceptor_room_lifecycle.rs  mobile_lifecycle.rs  network_safety.rs  passmanager_reload_smoke.rs  permissions_passmanager_acl.rs  tunnel_release_gates.rs  usb_integration.rs  volume_cross_backend.rs  volume_fuse_matrix.rs  volume_fuse_root_shard.rs  volume_fuse_rw.rs  volume_webdav_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: core_performance.rs
crates/core/src/: durable_file.rs  error.rs  lib.rs  types.rs
crates/core/src/catalog/: delta.rs  delta_tests.rs  manager.rs  manager_tests.rs  mod.rs  node.rs  node_tests.rs  path.rs  path_tests.rs  serialize.rs  serialize_tests.rs  shard.rs  shard_tests.rs  sharded.rs  sharded_tests.rs  system_shard.rs  system_shard_tests.rs  traversal.rs
crates/core/src/crypto/: argon2.rs  argon2_tests.rs  blake3.rs  blake3_tests.rs  chacha.rs  chacha_tests.rs  derive_vault_key.rs  derive_vault_key_tests.rs  mod.rs  sha256.rs  storage_pepper.rs  storage_pepper_tests.rs
crates/core/src/durable_tx/: artifact_store.rs  chunk_store.rs  codec.rs  mod.rs  participant.rs  record.rs  recovery.rs  tests.rs
crates/core/src/license/: error.rs  fingerprint.rs  mod.rs  policy.rs  store.rs  tests.rs  trusted_keys.rs  types.rs  validation.rs
crates/core/src/media_inspector/: iso_bmff.rs  mod.rs
crates/core/src/passkeys/: assertion.rs  crypto.rs  encoding.rs  mod.rs  query.rs  registration.rs  request.rs  summary.rs  types.rs  validation.rs  webauthn.rs
crates/core/src/rpc/: derivative_index.rs  helpers.rs  mod.rs  request_parse.rs  stream.rs
crates/core/src/storage/: backend.rs  chunk.rs  chunk_tests.rs  flat.rs  flat_tests.rs  format.rs  format_tests.rs  mod.rs
crates/core/src/vault/: decrypted_chunk_cache.rs  loading.rs  loading_tests.rs  mod.rs  rekey.rs  session.rs  session_tests.rs
crates/core/src/wallet/: mod.rs
crates/core/tests/: aad_chunk_name_binding.rs  admin_operations.rs  aead_layout_vectors.rs  argon2_params.rs  blob_chunk_io_v2.rs  blob_chunk_naming_contract.rs  catalog_events.rs  catalog_folder_batch.rs  catalog_folder_list.rs  catalog_hierarchy.rs  catalog_notes_list.rs  catalog_operations.rs  catalog_subscriptions.rs  catalog_sync_manifest.rs  chunk_naming_contract.rs  core_fault_injection.rs  credential_provider.rs  credential_provider_contract.rs  credential_provider_passkeys.rs  credential_provider_security.rs  delete_removes_chunks.rs  erase_operations.rs  error_scenarios.rs  file_operations.rs  file_upload_chunking.rs  local_backup_restore.rs  master_rekey.rs  master_setup.rs  passmanager_delta_overflow.rs  passmanager_domain_rpc.rs  passmanager_entry_persistence.rs  plausible_deniability.rs  push_event_schemas.rs  root_shard_overwrite_persistence.rs  rpc_command_aliases.rs  rpc_protocol_versioning.rs  rpc_required_fields.rs  rpc_system_commands.rs  salt_stretching_kdf_scaffold.rs  salt_stretching_restore_rehydrates_pepper.rs  (+26 more)
crates/core/tests/core_fault_injection/: admin_restore.rs  blob_io.rs  catalog.rs  derivative.rs  file_replace.rs  harness.rs  master_rekey.rs  passmanager.rs  restore_local.rs  session_temp.rs  storage_gc.rs  storage_reset.rs  support.rs  upload.rs  vault_rekey.rs
crates/core/tests/passmanager_domain_rpc/: entry_flows.rs  icon_flows.rs  import_export_flows.rs  otp_flows.rs  secret_flows.rs  support.rs
crates/core/tests/test_helpers/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: anti_replay.rs  anti_replay_tests.rs  frame.rs  frame_tests.rs  lib.rs  metrics.rs  metrics_tests.rs  noise.rs  noise_tests.rs  signaling.rs  signaling_tests.rs  transport.rs  transport_tests.rs
crates/tauri-plugin-ios-push-bridge/: Cargo.toml
crates/tauri-plugin-ios-push-bridge/ios/: Package.swift
crates/tauri-plugin-ios-push-bridge/ios/Sources/: IosPushBridgePlugin.swift
crates/tauri-plugin-ios-push-bridge/src/: lib.rs  mobile.rs
(+1996 files in other folders)
