[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/chromvoid/chromvoid"

[workspace.dependencies]
# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake3 = "1"
sha2 = "0.10"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
base64 = "0.22"
tar = "0.4"

# OTP
totp-rs = { version = "5.7", features = ["otpauth"] }

# Error handling
thiserror = "2"

# TypeScript bindings
ts-rs = { version = "11", features = ["serde-json-impl"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Dev dependencies
tempfile = "3"
