[package]
name = "chromvoid-cli"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "CLI for testing ChromVoid RPC interface"

[[bin]]
name = "chromvoid-cli"
path = "src/main.rs"

[dependencies]
# Core library
chromvoid-core = { path = "../core" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true
