[package]
name = "chromvoid-protocol"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Shared protocol types for ChromVoid: Frame encoding, Noise transport, anti-replay"

[dependencies]
snow = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"], optional = true }
async-trait = { version = "0.1", optional = true }

[features]
async-transport = ["tokio", "async-trait"]

[dev-dependencies]
tempfile.workspace = true
