[package]
name = "chromvoid"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.cargo-apple.ios]
no-default-features = true
features = ["ios"]

[lib]
name = "chromvoid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["desktop"]
desktop = [
    "dep:serialport",
    "dep:tokio-serial",
    "dep:webrtc",
    "dep:dav-server",
    "dep:hyper",
    "dep:hyper-util",
    "tokio/rt-multi-thread",
    "tokio/signal",
    "tauri/tray-icon",
]
mobile = [
    "tokio/rt",
]
ios = ["mobile"]
android = ["mobile"]
caldav = ["desktop", "dav-server/caldav"]
carddav = ["desktop", "dav-server/carddav"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "net", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
snow = "0.10"
sha2 = "0.10"
signature = "2"
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serialport = { version = "4", optional = true }
tokio-serial = { version = "5.4", optional = true }

webrtc = { version = "0.14", optional = true }
bytes = "1"
async-trait = "0.1"
url = "2"
quinn = { version = "0.11", default-features = true }
uuid = { version = "1", features = ["v4", "serde"] }
rustls-pemfile = "2"
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
hex = "0.4"
keyring = "3"

# ADR-023: WebDAV backend (localhost-only)
dav-server = { version = "0.10", optional = true }
hyper = { version = "1", features = ["http1", "server", "client"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "p384", "std", "rand_core"] }
chromvoid-core = { path = "../../../crates/core" }
chromvoid-protocol = { path = "../../../crates/protocol", features = ["async-transport"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { path = "../../../crates/fuser", features = ["abi-7-23"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { path = "../../../crates/fuser", features = ["libfuse", "abi-7-23"] }
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ssh2 = "0.9"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSUserDefaults", "NSString"] }
objc2-authentication-services = { version = "0.3.2", default-features = false, features = [
    "ASCredentialIdentityStore",
    "ASCredentialServiceIdentifier",
    "ASPasswordCredentialIdentity",
    "ASCredentialIdentityStoreState",
    "ASCredentialIdentity",
    "block2",
    "objc2-core-foundation",
    "std",
    "alloc",
] }
objc2-local-authentication = "0.3.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-background-tasks = "0.3.2"
objc2-ui-kit = { version = "0.3", features = [
    "UIApplication",
    "UIGestureRecognizer",
    "UIScreenEdgePanGestureRecognizer",
    "UIFeedbackGenerator",
    "UIImpactFeedbackGenerator",
    "UIView",
    "UITouch",
    "UIEvent",
    "UIResponder",
] }
tauri-plugin-ios-push-bridge = { path = "../../../crates/tauri-plugin-ios-push-bridge" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
http-body-util = "0.1"

[workspace]

[patch.crates-io]
swift-rs = { path = "vendor/swift-rs-1.0.7" }
