[package]
name = "chromvoid"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
build = "build.rs"

[package.metadata.cargo-apple.ios]
no-default-features = true
features = ["ios"]

[lib]
name = "chromvoid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = ["desktop"]
desktop = [
    "dep:webrtc",
    "dep:dav-server",
    "dep:hyper",
    "dep:hyper-util",
    "tokio/rt-multi-thread",
    "tokio/signal",
    "tauri/tray-icon",
]
mobile = [
    "tokio/rt",
]
ios = ["mobile"]
android = ["mobile"]
caldav = ["desktop", "dav-server/caldav"]
carddav = ["desktop", "dav-server/carddav"]

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
snow = "0.10"
sha2 = "0.10"
signature = "2"
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"
webrtc = { version = "0.14", optional = true }
bytes = "1"
async-trait = "0.1"
url = "2"
quinn = { version = "0.11", default-features = true }
uuid = { version = "1", features = ["v4", "serde"] }
rustls-pemfile = "2"
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
lofty = "0.24.0"
kamadak-exif = "0.6"
quick-xml = "0.39"
hex = "0.4"
keyring = "3"
zxcvbn = "3.1.0"

# ADR-023: WebDAV backend (localhost-only)
dav-server = { version = "0.10", optional = true }
hyper = { version = "1", features = ["http1", "server", "client"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "p384", "std", "rand_core"] }
zeroize = "1"
chromvoid-core = { path = "../../../crates/core" }
chromvoid-protocol = { path = "../../../crates/protocol", features = ["async-transport"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { path = "../../../crates/fuser" }
libc = "0.2"
dbus = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { path = "../../../crates/fuser", features = ["libfuse2"] }
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ssh2 = "0.9"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
libheif-rs = { version = "2.7", default-features = false, features = ["v1_17"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
webp = { version = "0.3", default-features = false }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSObject", "NSUserDefaults", "NSString", "NSFileManager", "NSURL"] }
objc2-authentication-services = { version = "0.3.2", default-features = false, features = [
    "ASCredentialIdentityStore",
    "ASCredentialServiceIdentifier",
    "ASPasswordCredentialIdentity",
    "ASCredentialIdentityStoreState",
    "ASCredentialIdentity",
    "block2",
    "objc2-core-foundation",
    "std",
    "alloc",
] }
objc2-local-authentication = "0.3.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-background-tasks = "0.3.2"
objc2-ui-kit = { version = "0.3", features = [
    "UIApplication",
    "UIGestureRecognizer",
    "UIScreenEdgePanGestureRecognizer",
    "UIFeedbackGenerator",
    "UIImpactFeedbackGenerator",
    "UIView",
    "UITouch",
    "UIEvent",
    "UIResponder",
] }
tauri-plugin-ios-push-bridge = { path = "../../../crates/tauri-plugin-ios-push-bridge" }
tauri-plugin-ios-native-bridge = { path = "../../../crates/tauri-plugin-ios-native-bridge" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[dev-dependencies]
ed25519-dalek = "2"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
tauri = { version = "2.10.3", features = ["test"] }
http-body-util = "0.1"

[workspace]

[patch.crates-io]
swift-rs = { path = "vendor/swift-rs-1.0.7" }
